{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 57,
  "lineage": "b8a7e152-6e89-f529-7cd6-393e7ecd30b2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0856843aeae4ca5c2",
            "domain": "vpc",
            "id": "eipalloc-02a16d36",
            "instance": "i-0dcdbd3d2292f042b",
            "network_border_group": "sa-east-1",
            "network_interface": "eni-0eec832cd006ecffa",
            "private_dns": "ip-10-0-51-54.sa-east-1.compute.internal",
            "private_ip": "10.0.51.54",
            "public_dns": "ec2-54-232-37-220.sa-east-1.compute.amazonaws.com",
            "public_ip": "54.232.37.220",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.this",
            "aws_security_group.tf-ec2-sg",
            "aws_subnet.tf-ec2-subnet",
            "aws_vpc.tf-ec2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c27c96aaa148ba6d",
            "arn": "arn:aws:ec2:sa-east-1:267322885737:instance/i-0dcdbd3d2292f042b",
            "associate_public_ip_address": false,
            "availability_zone": "sa-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dcdbd3d2292f042b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-ec2-script",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0eec832cd006ecffa",
            "private_dns": "ip-10-0-51-54.sa-east-1.compute.internal",
            "private_ip": "10.0.51.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a9cc0d6803cabad3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0cb9c62e07e6c86bb"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07be05c2390349a00",
            "tags": {
              "Application": "Quarkus Java 11",
              "Terraform": "True"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cb9c62e07e6c86bb"
            ]
          },
          "dependencies": [
            "aws_security_group.tf-ec2-sg",
            "aws_subnet.tf-ec2-subnet",
            "aws_vpc.tf-ec2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf-ec2-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:267322885737:internet-gateway/igw-06aca0b7dcdb2c8ad",
            "id": "igw-06aca0b7dcdb2c8ad",
            "owner_id": "267322885737",
            "tags": {
              "Name": "tf-ec2-igw"
            },
            "vpc_id": "vpc-0a4bf68909e827068"
          },
          "dependencies": [
            "aws_vpc.tf-ec2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf-ec2-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ed30c59e9a828baa",
            "owner_id": "267322885737",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06aca0b7dcdb2c8ad",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-ec2-rt"
            },
            "vpc_id": "vpc-0a4bf68909e827068"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tf-ec2-igw",
            "aws_vpc.tf-ec2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf-ec2-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ddcac57529a83ac",
            "route_table_id": "rtb-0ed30c59e9a828baa",
            "subnet_id": "subnet-07be05c2390349a00"
          },
          "dependencies": [
            "aws_internet_gateway.tf-ec2-igw",
            "aws_route_table.tf-ec2-rt",
            "aws_subnet.tf-ec2-subnet",
            "aws_vpc.tf-ec2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf-ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:267322885737:security-group/sg-0cb9c62e07e6c86bb",
            "description": "Allowing SSH Connection",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cb9c62e07e6c86bb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow-ssh-tf-ec2-app",
            "name_prefix": "",
            "owner_id": "267322885737",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a4bf68909e827068"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf-ec2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-ec2-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:267322885737:subnet/subnet-07be05c2390349a00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.32.0/19",
            "id": "subnet-07be05c2390349a00",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "267322885737",
            "vpc_id": "vpc-0a4bf68909e827068"
          },
          "dependencies": [
            "aws_vpc.tf-ec2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf-ec2-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:267322885737:vpc/vpc-0a4bf68909e827068",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08eab5489f5a64570",
            "default_route_table_id": "rtb-0d7a4145208050769",
            "default_security_group_id": "sg-0eaa5a2fe2ec8f3f9",
            "dhcp_options_id": "dopt-26236e41",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a4bf68909e827068",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d7a4145208050769",
            "owner_id": "267322885737",
            "tags": {
              "Name": "tf-ec2-vpc"
            },
            "tags_all": {
              "Name": "tf-ec2-vpc"
            }
          }
        }
      ]
    }
  ]
}